# AI-Driven-Energy-Management-System-for-Institutional-Networks

./: .env.example  .gitignore  BUILD_INFO.json  CHANGELOG.md  FINAL_DEMO_INSTRUCTIONS.txt  LICENSE  PACKAGE_MANIFEST.md  README.md  RUN_STAGE4_COST_MODEL.bat  SHA256SUMS.txt  START_AI4I_EMS.bat  START_EDGE_DEMO.bat  TEAM_SETUP_AND_RUN_INSTRUCTIONS.txt  TRAIN_PRIVATE_LIVE_MODEL.bat  pyproject.toml  requirements-dashboard.lock.txt  requirements-dev.lock.txt  requirements-training.lock.txt  requirements.lock.txt  requirements.txt
config/: cost_impact_scenarios.json  edge.example.json  facility_peak_limits.generated.json  study_cost_inputs.json  tariff.public-estimate.json
dashboard/: index.html
data_schema/: README.md  meter_readings_schema.csv
docs/: DEFERRED_ITEMS.md  RELEASE_SYNC_RECEIPT.md  accessibility_check.md  ai_justification.md  api_reference.md  architecture.md  business_model.md  claim_register.md  cost_impact_methodology.md  dataset_statement.md  demo_walkthrough.md  deployment_plan.md  edge_gateway_demo.md  guideline_alignment.md  implementation_plan.md  known_limitations.md  measurement_and_verification_plan.md  model_card.md  operator_workflow.md  pilot_deployment_plan.md  reproduction.md  risk_register.md  security_and_compliance.md  stage4_evidence_index.md  submission_evidence_index.md  synthetic_dataset_design.md  tariff_estimation_basis.md  team_and_ownership.md  test_evidence.md  track3_evidence_checklist.md  user_persona_and_journey.md
evidence/: README.md
hardware/: README.md  edge_gateway_plan.md  meter_interface_options.md  proposed_bom.md  (+1 more)
(+102 files in other folders)
