[project]
name = "ai4i-institutional-ems"
version = "1.2.0"
description = "AI-driven energy-management decision support for institutional electrical networks."
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "AI4I-EMS Team" }
]
dependencies = [
  "fastapi==0.139.0",
  "joblib==1.5.3",
  "matplotlib==3.11.0",
  "numpy==2.5.1",
  "openpyxl==3.1.5",
  "pandas==3.0.3",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "scikit-learn==1.9.0",
  "uvicorn==0.51.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.1.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
